产品详情页

--- a/nextHour/index.html
+++ b/nextHour/index.html
@@ -24,7 +24,7 @@
         <div class="share-guide" id="mobile-guide"></div>
     </div>
     <nav class="site-nav" tabindex="-1">
-        <div class="site-nav-logo icons-logo-circle distraction-free-component" id="open-nav-button" data-action="open-nav">
+        <div class="site-nav-logo icons-logo-circle distraction-free-component move-to-new-position" id="open-nav-button" data-action="open-nav">
             <!--<span class="icons-logo-content">国</span>-->
             <span class="icons ">
                 <span class="screen-reader-text">guoguan site navigation
@@ -32,7 +32,7 @@
             </span>
             <div class="site-nav-activity-flag"></div>
         </div>
-        <div class="site-nav-scrollable-container" id="site-nav-scrollable-container">
+        <div class="site-nav-scrollable-container move-to-new-position" id="site-nav-scrollable-container">
             <ul class="site-nav-list">
                 <li class="site-nav-list-item navigable-list-item" style="margin-top:0.5rem">
                     <a class="site-nav-list-item-btn" title="Go home" href="#" tabindex="-1">
@@ -97,8 +97,8 @@
         </ul>
     </div>
 
-    <div class="site-container" id="site-container">
-        <div class="surface" style="visibility: visible">
+    <div class="site-container move-to-new-position" id="site-container">
+        <div class="surface move-to-new-position" style="visibility: visible">
             <div class="site-focus">
                 <div class="site-content">
                     <div class="site-title">
@@ -125,13 +125,13 @@
                         </div>
 
                         <div class="next-hour-big-title">
-                            我当然也面临很多烦恼，只是我做出了合适的选择。
+                            <img src="images/1-1.png" style="width: 100%">
                         </div>
-
-                    </div>
-                    <div class="site-middle-button" style="text-align: center">
-                        <p class="button" style="margin-bottom: 50px"><a class="btn btn-default btn-lg " id="share-to-sina-button" role="button">分享赢中国道<i class="icon-chevron-right ml10"></i></a></p>
-
+                        <div>
+                            <a href="#">
+                            分享
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -140,9 +140,63 @@
                 <a class="btn btn-link" title="" href="">来篇文章</a>
                 <a class="btn btn-link" title="" href="">月光宝盒</a>
                 <div class="floating" style="width: 100%;  margin-left:auto; margin-right:auto; margin-top:30px; margin-bottom:30px; color:#fff; font-size:24px;">
-                    <i class="icon-angle-down "></i>
+                    <a href="#site-paper-content" class="scroll-to-paper">
+                        <i class="icon-angle-down "></i>
+                    </a>
                 </div>
             </footer>
+        </div>
+
+        <div class="site-paper-content-position move-to-new-position" id="site-paper-content">
+            <div class="site-paper-content">
+                <pre>
+    台湾仿佛有一种舒缓情绪的魔力，从入关开始我们便被带入了一种缓慢而急不起来的节奏。从在柜台办理电话卡，到去星巴克买一杯简单的美式咖啡，再到猫空（台北木栅茶区，著名的茶产地和观光茶园）搭乘空中缆车，即使后面排满了长队，工作人员也一样慢条斯理地从事着手中的工作。
+　　捷运站台因为跨年将至人潮异常爆满，人们也都不忙不迭地保持着平日应有的秩序，脸上挂着闲适轻松的表情，与同伴有一搭没一搭地说着绵柔的台语。
+　　也许正是被这样轻松的氛围所感染，让我们这些从北京这样快节奏的地方过来的游客没有感到一丝的焦急，反而享受到了前所未有的放松。
+　　不再在早九点拥堵的车流中焦虑上班的时间，不再在午休的一小时里急躁于餐厅上菜的速度，不再在午夜将至焦急着赶上最后一班的地铁。在这片时间缓缓流动的岛屿上，只是想让自己的心绪也缓慢下来。
+　　【“瞒着爹”】
+　　作为一对资深的吃货，胡吃海喝是我们无论游历到哪儿都永恒不变并且最为优先的主题，更不用说到了美食天堂的宝岛台湾。
+　　虽然与大陆分隔在海峡两端，但台湾还是汇集了全国上下从北到南的各路美食、粗犷豪爽的东北风味、异域风情的西北大餐，精致淡雅的苏杭美食，在这里都被加以本地特色而重新演绎。
+　　台湾的美食主打食材的优质与制作的用心。无论是预约星级餐厅品尝精品台菜，抑或只是造访路边小店吃一碗鱼丸面线，都需要小口小口缓慢细心地品味，方才对得起店家诚意的准备。
+　　肉燥饭是台北最负盛名的美食之一，做法看似简单的碎肉卤汁浇上米饭，吃起来却是回味无穷。控肉、肉燥和卤肉经常被误以为是同一食物在台湾不同地域的不同叫法，而我们也是在当地转悠了几天以后才顿悟到这其实是三种不同的东西。
+　　最简单的区分方法是以肉的尺寸决定：控肉是指切成厚片的猪肉，卤肉则以肉丁或小块猪肉为材料，而以碎肉炒制而成的浇饭卤汁才能算是肉燥。
+　　猪肉的油汁裹上柔软的米饭下肚是世界上最简单直白的解馋妙方，因为在炒制肉燥的时候加入了香菇等吸油的食材，又恰到好处地做到了香而不腻。台北肉燥饭的分量普遍不大，不到 100g 米饭加一汤勺肉燥的样子，只吃一碗下肚当真是意犹未尽的。
+　　除去肉燥、蚵仔煎、牛肉面线这些本土的台湾美食，在台北，另一个不得不提的美食派系则是地道又便宜的日式菜肴。作为日（本）料（理）控的我们，无论是日式烧串、豚骨拉面还是鱼生丼饭都大快朵颐地尝了个遍。
+　　据一个在台北工作了三年的同事说，这里的日料店多为土生土长的日本人在经营，从材料到做法都保留着正宗的日式风格。“瞒着爹”是一家名字很容易被记忆的日式餐馆，据说店名的由来是因为店主瞒着家里人开店，并且接连开了三家。一店以鱼生为主，二店则主营熟食煮物，我们拜访的三店是三间店中唯一不需要预约的，店中只制作各色丼饭与汤食。
+　　三店的店面不大，食客们在门外排队等位，排到后在吧台点好餐，再入店落座。我豪气地选择了食材较贵的蝴蝶虾海胆丼饭，五只肥美的生虾依次排开在醋饭之上，上面再铺一层海胆与鱼籽，点缀些海苔碎与葱末，拌上新鲜磨制的山葵酱，这样一份生鲜美味却只用去了 680 台币。
+　　【山城九份】
+　　在台北车站搭乘到瑞芳的火车，顺便品尝一下台铁便当，再转一班大巴就到了九份老街。在细雨连绵的湿冷天气里捧一杯冒着热气的金枣茶，循着民宿老板在名片上手绘的景点一一走访。
+　　老街的商户们散落在山城弯弯曲曲的小巷中，这里贩卖极具台湾特色的各式小吃和手工艺品，每经过一家，商户老板们都热心地与我们攀谈，邀请我们到店里品尝自制的餐点，意却不在兜售，仿佛只是想与远道而来的朋友聊聊天，一同享受一下这座小镇徐徐拂过的微风。
+　　与台北丰富多元的世界美食相比，九份的小吃则更显地道，口碑颇佳的赖阿婆芋圆，阿妹茶楼精心调制的奶茶，护理长店中品种繁多的卤味小食，都蕴含着浓浓的本土风味。
+　　随着夜幕的降临，老街上的气氛却越发活络，九份山城也显露出了真正迷人的形态。从观景台上望去，群山层叠起伏渐隐渐远一直绵延至朦胧的海岸线，远处山腰上点点的灯光竞相明亮，顺着山的轮廓连成一条流淌到山脚的光之河，酒吧传出来的 blues 和 jazz 伴着远处海边吹来的微风轻柔地灌进耳朵，雨渐停，头顶的薄云散去，清澈的圆月跃上天空，抬头合上眼睛，被温暖的星光散下来包裹了全身。游客们默契地学着当地居民轻声细语地讲话，生怕打扰了这样清静惬意的夜晚。
+　　【北投温泉】
+　　逛完了山城，我们便奔向了可以仰躺放空的温泉酒店。在台北市北端的北投区有着天然的地热涌泉，这里的硫磺泉种优质到连以温泉闻名的日本也有许多游客慕名至此。
+　　我们选择了一家既可以享用露天浴场又可以将泉水引入客房泡私汤的山间酒店，被绿植与湿气围绕，对于喜爱闲适慵懒的我们再适合不过。元月的气候仍然微凉，将身子埋进温润的泉水，仰头望去天空一片广阔清澈，繁星点点地泛着微光，交织着星座间美丽的神话。
+　　除去各种档次的温泉酒店，北投更像是一个温泉主题的自然公园。比起高楼林立的城市中心，这里有着更加原始与朴实的景致，沿着自山上流下的北投溪混着热气升腾的温泉水，带着湿气的深褐色木质建筑与鸟语花香组成了这个颇具日式风格的区域。
+　　年代久远的古树与苍劲有力的矮松随性装点在路边，色彩炫丽的香花肆意漫出红砖砌成的矮墙，温泉博物馆外的广场上一位街头艺人正用排萧吹奏着轻盈的小曲儿，与隐匿在树中的飞鸟和涓涓流淌的溪水演绎着人与自然共同谱写的乐章。时间正值傍晚，渐隐西山的日光为面前的每一处剪影都镶上了耀眼的金边，照得人们也更加慵懒，像要融化在这一片柔美的光影之中。
+　　【淡水，愚人码头】
+　　看过的台湾影视作品不多，《不能说的秘密》算是记忆深刻的一部。带着仿佛时间倒流的心境，我们跟着淡水当地大学的志愿导游走访了这部影片的取景地淡江中学。
+　　校园中总有着不同于别处的宁静，红砖建筑有着些许欧式教堂的风格，树影晃动，教室里传出朗朗的书声，偶尔有学妹穿着靛蓝色的校服从我们身边经过，旋转着青春活力的裙摆。
+　　有那么一瞬间，我真的觉得时光停驻或者干脆退到了从前，午后的阳光照得整个世界都不太真实，虚幻到让我们不用想起明天的归期将至。
+　　 “多么愚蠢是我，多么爱你是我，才会守着不走，你给的寂寞，才会痴痴固守，这愚人码头。”
+　　多年前熊天平用自己独有的嗓音将这个本不知名的淡水渔港唱到了家喻户晓，多年后我将耳机塞进耳朵靠在码头的围栏边细细地回味。面对眼前广阔无边一直连接到天际的深海，任由海风吹飞了头发，吹淡了远处低沉的汽笛，也吹散了耳边游客的欢歌笑语。
+　　这里是这座海岛的边缘，也是我们这趟旅途的终点，好在还有眼前这一片湛蓝的天水一色能包容住我复杂的心绪。闭上眼，让这些美好的过往在心中牢牢地定格，嘴角泛起如风般轻柔的微笑，“时间是码头，它收留我停泊”。
+                </pre>
+            </div>
+
+            <div class="surface-bottom" style="visibility: visible ; ">
+                <div class="site-focus">
+
+                </div>
+                <!--<footer class=" footer-fixed footer-promotional btn-set layout-single-column">
+                    <a class="btn btn-link" title="">听个段子</a>
+                    <a class="btn btn-link" title="" href="">来篇文章</a>
+                    <a class="btn btn-link" title="" href="">月光宝盒</a>
+                    <div class="floating" style="width: 100%;  margin-left:auto; margin-right:auto; margin-top:30px; margin-bottom:30px; color:#fff; font-size:24px;">
+                        <i class="icon-angle-down "></i>
+                    </div>
+                </footer>-->
+            </div>
         </div>
     </div>
 
@@ -150,12 +204,10 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
-
 <script>
     var isHiden = true; /*控制切换菜单*/
-
-    /*弹出左侧栏*/
     $(document).ready(function(){
+        /*弹出左侧栏*/
         $('#open-nav-button').click(openLeftNav);
         $('#site-container').click(function(){
             if(!isHiden){
@@ -168,22 +220,33 @@
             event.preventDefault();
         }, false);
 
+        /*滚动到文章*/
+        $("a.scroll-to-paper").click(function() {
+            $("html, body").animate({
+                scrollTop: $($(this).attr("href")).offset().top + "px"
+            }, {
+                duration: 500,
+                easing: "swing"
+            });
+            return false;
+        });
     });
+
+
     function openLeftNav() {
         console.log("1111");
         if(isHiden){
-            $('#site-nav-scrollable-container').animate({left:'+=13rem'},100);//菜单块向右移动
-            $('#site-container').animate({left:'+=13rem'},100);//菜单块向右移动
-            $('#open-nav-button').animate({left:'+=13rem'},100);//菜单块向右移动
+            $('.move-to-new-position').animate({left:'+=13rem'},100);//菜单块向右移动
             $("#open-nav-button").css("display","none");
+            $(".site-nav").css("position","fixed");
         }else{
-            $('#site-nav-scrollable-container').animate({left:'-=13rem'},100); //菜单块向左移动
-            $('#site-container').animate({left:'-=13rem'},100); //菜单块向左移动
-            $('#open-nav-button').animate({left:'-=13rem'},100); //菜单块向左移动
+            $('.move-to-new-position').animate({left:'-=13rem'},100); //菜单块向左移动
             $("#open-nav-button").fadeIn(1000);
+            $(".site-nav").css("position","absolute");
         }
         isHiden = !isHiden;
     }
+
 
 </script>
 </body>
