--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -10,7 +10,14 @@
     <link rel="stylesheet" href="css/m-product.css">
 </head>
 <body>
+<style>
+    img{vertical-align:top; display:block}
+</style>
 
+<div class="share-cover">
+    <div class="share-guide" id="weixin-guide"></div>
+    <div class="share-guide" id="mobile-guide"></div>
+</div>
 <!--header-->
 <nav>
     <div class="icon-home icon-home-appearance icon-active" ></div>
@@ -36,37 +43,125 @@
 
 <!--tab切换页-->
 <div id="tab-container" class='tab-container' style="border-top: 0.1rem solid #ebebeb">
-    <ul class='etabs'>
+    <!--<ul class='etabs'>
         <li class='tab'><a href="#tabs1-html">概述</a></li>
         <li class='tab'><a href="#tabs1-js">参数</a></li>
         <li class='tab'><a href="#tabs1-css">故事</a></li>
-    </ul>
+    </ul>-->
     <div class='panel-container'>
-        <div id="tabs1-html">
-            <div class="product-detail-one">
-                <img class="lazy" src="images/grey.gif" data-original="images/1-01.jpg" style="width: 100%">
-                <noscript><img src="images/1-01.jpg" style="width: 100%"></noscript>
+        <div id="tabs1-html" style="background-color: #fff">
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_01.jpg" style="width: 100%">
+                <noscript><img src="images/11_01.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-detail-two">
-                <img class="lazy" src="images/grey.gif" data-original="images/mitv-conc-01.jpg" style="width: 100%">
-                <noscript><img src="images/mitv-conc-01.jpg" style="width: 100%"></noscript>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_02.jpg" style="width: 100%">
+                <noscript><img src="images/11_02.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-detail-three">
-                <img class="lazy" src="images/grey.gif" data-original="images/mitv-cond-02.jpg" style="width: 100%">
-                <noscript><img src="images/mitv-cond-02.jpg" style="width: 100%"></noscript>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_03.jpg" style="width: 100%">
+                <noscript><img src="images/11_03.jpg" style="width: 100%"></noscript>
             </div>
-            <div class="product-detail-four">
-                <img class="lazy" src="images/grey.gif" data-original="images/mitv-conf-01.jpg" style="width: 100%">
-                <noscript><img src="images/mitv-conf-01.jpg" style="width: 100%"></noscript>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_04.jpg" style="width: 100%">
+                <noscript><img src="images/11_04" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_05.jpg" style="width: 100%">
+                <noscript><img src="images/11_05.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_06.jpg" style="width: 100%">
+                <noscript><img src="images/11_06.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_07.jpg" style="width: 100%">
+                <noscript><img src="images/11_07.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_08.jpg" style="width: 100%">
+                <noscript><img src="images/11_08.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_09.jpg" style="width: 100%">
+                <noscript><img src="images/11_09.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_10.jpg" style="width: 100%">
+                <noscript><img src="images/11_10.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_11.jpg" style="width: 100%">
+                <noscript><img src="images/11_11.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_12.jpg" style="width: 100%">
+                <noscript><img src="images/11_12.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_13.jpg" style="width: 100%">
+                <noscript><img src="images/11_13.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_14.jpg" style="width: 100%">
+                <noscript><img src="images/11_14jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_15.jpg" style="width: 100%">
+                <noscript><img src="images/11_15.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_16.jpg" style="width: 100%">
+                <noscript><img src="images/11_16.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_17.jpg" style="width: 100%">
+                <noscript><img src="images/11_17.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_18.jpg" style="width: 100%">
+                <noscript><img src="images/11_18.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_19.jpg" style="width: 100%">
+                <noscript><img src="images/11_19.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_20.jpg" style="width: 100%">
+                <noscript><img src="images/11_20.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_21.jpg" style="width: 100%">
+                <noscript><img src="images/11_21.jpg" style="width: 100%"></noscript>
+            </div>
+            <div class="" style="position: relative">
+                <img class="lazy" src="images/grey.gif" data-original="images/11_22.jpg" style="width: 100%">
+                <noscript><img src="images/11_22.jpg" style="width: 100%"></noscript>
+                <a href="javascript:void(0)"  id="share-to-sina-button">
+                    <div class="m-button" style="position: absolute;
+    top: 50%;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);">
+                        <div class="m-button-content">
+                            分享到朋友圈
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
 
-        <div id="tabs1-js">
+       <!-- <div id="tabs1-js">
             <div class="product-data-one">
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
             <div class="product-data-two">
-                <img src="images/mitv-conc-01.jpg" style="width: 100%">
+                <img src="images/11_01.jpg" style="width: 100%">
             </div>
             <div class="product-data-three">
                 <img src="images/mitv-cond-02.jpg" style="width: 100%">
@@ -81,7 +176,7 @@
                 <img src="images/1-01.jpg" style="width: 100%">
             </div>
             <div class="product-story-two">
-                <img src="images/mitv-conc-01.jpg" style="width: 100%">
+                <img src="images/11_01.jpg" style="width: 100%">
             </div>
             <div class="product-story-three">
                 <img src="images/mitv-cond-02.jpg" style="width: 100%">
@@ -89,7 +184,7 @@
             <div class="product-story-four">
                 <img src="images/mitv-conf-01.jpg" style="width: 100%">
             </div>
-        </div>
+        </div>-->
     </div>
 </div>
 
@@ -120,6 +215,7 @@
 <script src="js/jquery.lazyload.js" type="text/javascript"></script>
 <script src="js/jquery.hashchange.min.js" type="text/javascript"></script>
 <script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
+<script src="js/option.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(function(){
         $("img.lazy").lazyload();
