--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -178,13 +178,11 @@
             立即购买
         </div>
     </div>
-    <a href="javascript:void(0)"  id="share-to-sina-button">
-        <div class="m-button width49 mt1">
-            <div class="m-button-content">
-                分享到朋友圈
-            </div>
+    <div class="m-button width49 mt1" id="share-to-sina-button">
+        <div class="m-button-content">
+            分享到朋友圈
         </div>
-    </a>
+    </div>
 </div>
 
 <!--footer-->
