--- a/product/m-product-detail.html
+++ b/product/m-product-detail.html
@@ -51,52 +51,52 @@
     <div class='panel-container'>
         <div id="tabs1-html" style="background-color: #fff">
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_01.jpg" style="width: 100%">
-                <noscript><img src="images/11_01.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_01.webp" style="width: 100%">
+                <noscript><img src="images/11_01.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_02.jpg" style="width: 100%">
-                <noscript><img src="images/11_02.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_02.webp" style="width: 100%">
+                <noscript><img src="images/11_02.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_03.jpg" style="width: 100%">
-                <noscript><img src="images/11_03.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_03.webp" style="width: 100%">
+                <noscript><img src="images/11_03.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_04.jpg" style="width: 100%">
-                <noscript><img src="images/11_04" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_04.webp" style="width: 100%">
+                <noscript><img src="images/11_04.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_05.jpg" style="width: 100%">
-                <noscript><img src="images/11_05.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_05.webp" style="width: 100%">
+                <noscript><img src="images/11_05.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_06.jpg" style="width: 100%">
-                <noscript><img src="images/11_06.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_06.webp" style="width: 100%">
+                <noscript><img src="images/11_06.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_07.jpg" style="width: 100%">
-                <noscript><img src="images/11_07.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_07.webp" style="width: 100%">
+                <noscript><img src="images/11_07.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_08.jpg" style="width: 100%">
-                <noscript><img src="images/11_08.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_08.webp" style="width: 100%">
+                <noscript><img src="images/11_08.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_09.jpg" style="width: 100%">
-                <noscript><img src="images/11_09.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_09.webp" style="width: 100%">
+                <noscript><img src="images/11_09.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_10.jpg" style="width: 100%">
-                <noscript><img src="images/11_10.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_10.webp" style="width: 100%">
+                <noscript><img src="images/11_10.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_11.jpg" style="width: 100%">
-                <noscript><img src="images/11_11.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_11.webp" style="width: 100%">
+                <noscript><img src="images/11_11.webp" style="width: 100%"></noscript>
             </div>
             <div class="">
-                <img class="lazy" src="images/grey.gif" data-original="images/11_12.jpg" style="width: 100%">
-                <noscript><img src="images/11_12.jpg" style="width: 100%"></noscript>
+                <img class="lazy" src="images/grey.gif" data-original="images/11_12.webp" style="width: 100%">
+                <noscript><img src="images/11_12.webp" style="width: 100%"></noscript>
             </div>
         </div>
 
