--- a/weixinApp/index.html
+++ b/weixinApp/index.html
@@ -155,12 +155,26 @@
    </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
@@ -174,12 +188,26 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
@@ -193,12 +221,26 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
@@ -212,12 +254,26 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
@@ -231,12 +287,26 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
@@ -250,12 +320,26 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
-            <li>
-                <img src="images/index-focus-img.jpg" height="50" width="50">这是一篇文章
-            </li>
+            <a href="http://www.guoguan.com/wenzhang/0000169/" >
+                <li>
+                    在尘世幸福
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000170/" >
+                <li>
+                    咖啡里的苍蝇
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000171/" >
+                <li>
+                    人生需要妥协
+                </li>
+            </a>
+            <a href="http://www.guoguan.com/wenzhang/0000172/" >
+                <li>
+                    找不着幸福赖谁
+                </li>
+            </a>
         </ul>
     </div>
 </div>
