--- a/weixinApp/index.html
+++ b/weixinApp/index.html
@@ -10,7 +10,7 @@
 <body ng-controller="PhoneListCtrl">
 
 <div class="share-cover">
-    <div class="share-guide" id="weixin-guide"></div>
+    <div class="share-guide" id="weixin-guide" ng-click="closeCover()"></div>
     <div class="share-guide" id="mobile-guide"></div>
 </div>
 
