--- a/weixinApp/index.html
+++ b/weixinApp/index.html
@@ -7,6 +7,53 @@
     <link rel="stylesheet" href="css/base.css">
     <link rel="stylesheet" href="css/layout.css">
 </head>
+<style>
+    .spinner {
+        margin: 100px auto;
+        width: 70px;
+        height: 30px;
+        text-align: center;
+        font-size: 10px;
+    }
+    .spinner > div {
+        background-color: #f66900;
+        height: 100%;
+        width: 6px;
+        display: inline-block;
+
+        -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
+        animation: stretchdelay 1.2s infinite ease-in-out;
+    }
+    .spinner .rect2 {
+        -webkit-animation-delay: -1.1s;
+        animation-delay: -1.1s;
+    }
+    .spinner .rect3 {
+        -webkit-animation-delay: -1.0s;
+        animation-delay: -1.0s;
+    }
+    .spinner .rect4 {
+        -webkit-animation-delay: -0.9s;
+        animation-delay: -0.9s;
+    }
+    .spinner .rect5 {
+        -webkit-animation-delay: -0.8s;
+        animation-delay: -0.8s;
+    }
+    @-webkit-keyframes stretchdelay {
+        0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
+        20% { -webkit-transform: scaleY(1.0) }
+    }
+    @keyframes stretchdelay {
+        0%, 40%, 100% {
+            transform: scaleY(0.4);
+            -webkit-transform: scaleY(0.4);
+        }  20% {
+               transform: scaleY(1.0);
+               -webkit-transform: scaleY(1.0);
+           }
+    }
+</style>
 <body ng-controller="PhoneListCtrl">
 
 <div class="share-cover">
@@ -155,24 +202,15 @@
    </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
@@ -188,24 +226,15 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
@@ -221,24 +250,15 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
@@ -254,24 +274,15 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
@@ -287,24 +298,15 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
@@ -320,28 +322,27 @@
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://www.guoguan.com/wenzhang/0000169/" >
-                <li>
-                    在尘世幸福
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+                <li style="font-size: 2rem; margin-bottom: 0;">
+                    关注国馆
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000170/" >
-                <li>
-                    咖啡里的苍蝇
+                <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
+                    guoguanjiu
                 </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000171/" >
-                <li>
-                    人生需要妥协
-                </li>
-            </a>
-            <a href="http://www.guoguan.com/wenzhang/0000172/" >
-                <li>
-                    找不着幸福赖谁
+                <li style="line-height: 2rem">
+                    国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
                 </li>
             </a>
         </ul>
     </div>
+</div>
+
+<div class="spinner"  style="display: none">
+    <div class="rect1"></div>
+    <div class="rect2"></div>
+    <div class="rect3"></div>
+    <div class="rect4"></div>
+    <div class="rect5"></div>
 </div>
 
 </body>
