--- a/weixinApp/wine.html
+++ b/weixinApp/wine.html
@@ -9,49 +9,46 @@
 </head>
 <style>
     .spinner {
-        margin: 100px auto;
-        width: 70px;
-        height: 30px;
         text-align: center;
-        font-size: 10px;
+        padding-top: 48%;
     }
-    .spinner > div {
-        background-color: #f66900;
-        height: 100%;
-        width: 6px;
-        display: inline-block;
 
-        -webkit-animation: stretchdelay 1.2s infinite ease-in-out;
-        animation: stretchdelay 1.2s infinite ease-in-out;
+    .spinner > div {
+        width: 18px;
+        height: 18px;
+        background-color: #fff;
+        border-radius: 100%;
+        display: inline-block;
+        -webkit-animation: bouncedelay 1.4s infinite ease-in-out;
+        animation: bouncedelay 1.4s infinite ease-in-out;
+        /* Prevent first frame from flickering when animation starts */
+        -webkit-animation-fill-mode: both;
+        animation-fill-mode: both;
     }
-    .spinner .rect2 {
-        -webkit-animation-delay: -1.1s;
-        animation-delay: -1.1s;
+
+    .spinner .bounce1 {
+        -webkit-animation-delay: -0.32s;
+        animation-delay: -0.32s;
     }
-    .spinner .rect3 {
-        -webkit-animation-delay: -1.0s;
-        animation-delay: -1.0s;
+
+    .spinner .bounce2 {
+        -webkit-animation-delay: -0.16s;
+        animation-delay: -0.16s;
     }
-    .spinner .rect4 {
-        -webkit-animation-delay: -0.9s;
-        animation-delay: -0.9s;
+
+    @-webkit-keyframes bouncedelay {
+        0%, 80%, 100% { -webkit-transform: scale(0.0) }
+        40% { -webkit-transform: scale(1.0) }
     }
-    .spinner .rect5 {
-        -webkit-animation-delay: -0.8s;
-        animation-delay: -0.8s;
-    }
-    @-webkit-keyframes stretchdelay {
-        0%, 40%, 100% { -webkit-transform: scaleY(0.4) }
-        20% { -webkit-transform: scaleY(1.0) }
-    }
-    @keyframes stretchdelay {
-        0%, 40%, 100% {
-            transform: scaleY(0.4);
-            -webkit-transform: scaleY(0.4);
-        }  20% {
-               transform: scaleY(1.0);
-               -webkit-transform: scaleY(1.0);
-           }
+
+    @keyframes bouncedelay {
+        0%, 80%, 100% {
+            transform: scale(0.0);
+            -webkit-transform: scale(0.0);
+        } 40% {
+              transform: scale(1.0);
+              -webkit-transform: scale(1.0);
+          }
     }
 </style>
 <body ng-controller="PhoneListCtrl">
@@ -61,19 +58,23 @@
     <div class="share-guide" id="mobile-guide"></div>
 </div>
 
-<div class="part-one" ng-show="action == 'index'">
-    <h3 class="part-one-title">酒量排名大赛</h3>
-    <div class="part-one-content " style="padding-top: 0;">
-        已有32万网友参与测试！
+<div ng-show="action == 'index'">
+    <div class="app-title-banner">
+        <h3 class="part-one-title " >酒量排名大赛</h3>
+        <div class="part-one-content " style="padding-top: 0; ">
+            已有32万网友参与测试！
+        </div>
     </div>
     <div class="part-one-banner"></div>
-    <div class="part-one-content">
-        人在江湖走，哪能不喝酒？俗话说小酒怡情，大酒伤身。快来看看你的酒量排名是多少吧！
-    </div>
-    <div class="content" ng-click="enterApp()">
-        <div class="m-button width100 enter-app-button">
-            <div class="m-button-content">
-                进入测试
+    <div class="part-one">
+        <div class="part-one-content" style="color:#9c9c9c; width: 100%">
+            人在江湖走，哪能不喝酒？俗话说小酒怡情，大酒伤身。快来看看你的酒量排名是多少吧！
+        </div>
+        <div class="content" ng-click="enterApp()" style="width: 100%">
+            <div class="m-button width100 enter-app-button">
+                <div class="m-button-content">
+                    进入测试
+                </div>
             </div>
         </div>
     </div>
@@ -81,8 +82,10 @@
 
 <div class="part-two" style="display: none" ng-style="{display: action == 'itemOne' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">1/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-1.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[0].name}}</div>
@@ -93,8 +96,10 @@
 
 <div class="part-two" style="display: none" ng-style="{display: action == 'itemTwo' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">2/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-2.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[1].name}}</div>
@@ -107,8 +112,10 @@
 </div>
 <div class="part-two"  style="display: none" ng-style="{display: action == 'itemThree' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">3/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-3.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[2].name}}</div>
@@ -120,9 +127,11 @@
     </div>
 </div>
 <div class="part-two" style="display: none" ng-style="{display: action == 'itemFour' ? 'block' : 'none'}">
-    <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">4/7</div>
+    <div class="app-title-banner ">
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-4.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[3].name}}</div>
@@ -135,8 +144,10 @@
 </div>
 <div class="part-two" style="display: none" ng-style="{display: action == 'itemFive' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">5/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-5.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[4].name}}</div>
@@ -149,8 +160,10 @@
 </div>
 <div class="part-two" style="display: none" ng-style="{display: action == 'itemSix' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">6/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-6.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[5].name}}</div>
@@ -161,10 +174,12 @@
         <div class="item-choose" ng-click="itemSixChoose(0)">{{item[5].choose[4].text}}</div>
     </div>
 </div>
-<div class="part-two" style="display: none" ng-style="{display: action == 'itemSeven' ? 'block' : 'none'}">
+<div class="part-two show-result-class" style="display: none" ng-style="{display: action == 'itemSeven' ? 'block' : 'none'}">
     <div class="app-title-banner">
-        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
-        <div class="title-number">7/7</div>
+        <h3 class="part-one-title tacenter" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
+        <div class="title-number">
+            <img src="images/2-7.png" style="width: 100%;">
+        </div>
     </div>
     <div class="content ">
         <div class="item-title">{{item[6].name}}</div>
@@ -174,13 +189,13 @@
     </div>
 </div>
 
-<div class="part-two" style="display: none" ng-style="{display: action == 'resultPrevious' ? 'block' : 'none'}">
+<div class="part-two show-result-class-two" style="display: none" ng-style="{display: action == 'resultPrevious' ? 'block' : 'none'}">
     <div class="app-title-banner">
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">酒量排名大赛</h3>
     </div>
     <div class="content">
-        <h3 class="part-one-title" style="text-align: center">结果居然是这样，惊呆了！</h3>
-        <div class="part-one-content" style="margin-top: 10rem">
+        <h3 class="part-one-title" style="text-align: center; color: #565656">结果居然是这样，惊呆了！</h3>
+        <div class="" style="margin-top: 10rem; color: #9c9c9c">
            晒晒你的酒量，让别人仰望一下
         </div>
         <div class="m-button width100 enter-app-button" id="share-to-sina-button" ng-click="showResult()">
@@ -197,12 +212,12 @@
        <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
        <div class="result-percent"><span class="result-percent-number">10%</span><span>网友</span></div>
    </div>
-   <div class="part-one-content">
+   <div class="part-one-content" style="color: #565656; margin-top: 1rem;">
        解析：你真不适合喝酒，真的，可能上辈子喝太多了，连这辈子的都喝了。不过你如果送酒给别人，这个情谊就比别人的都深厚。
    </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -221,12 +236,12 @@
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
         <div class="result-percent"><span class="result-percent-number">36%</span><span>网友</span></div>
     </div>
-    <div class="part-one-content">
+    <div class="part-one-content" style="color: #565656; margin-top: 1rem;">
         解析：酒量还不错哦，微醉，脸红的比较多，打嗝开始有一股酒味了。偶尔会进入胡话阶段，能把半生不熟的人当成兄弟对待。不过更多的是点到为止，喝的不是酒，是情谊。
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -245,12 +260,12 @@
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
         <div class="result-percent"><span class="result-percent-number">51%</span><span>网友</span></div>
     </div>
-    <div class="part-one-content">
+    <div class="part-one-content" style="color: #565656; margin-top:1rem">
         解析：你的酒量进入了全国的平均水平，招架瓶酒还是游刃有余的。这样的人如果要锻炼酒量，勇气也是最大的，完全不去管醉后会怎样，就在这样“义无反顾”的状态下，他们的酒量慢慢的锻炼出来，可以喝倒更多的人！！
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -269,12 +284,12 @@
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
         <div class="result-percent"><span class="result-percent-number">69%</span><span>网友</span></div>
     </div>
-    <div class="part-one-content">
+    <div class="part-one-content" style="color: #565656; margin-top:1rem">
         解析：哎呦，能喝点酒喔。你喝酒主要看心情，心情好的时候谁都没你的酒量好，甚至你都觉得自己要化身“酒神”了，因为眼看着自己一杯杯不同的酒下肚居然脸不红心不跳。酒量确实惊人！但是心情不好的时候可能就喝不了这么多啦！不过也要比一般人强哦！
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -293,12 +308,12 @@
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
         <div class="result-percent"><span class="result-percent-number">82%</span><span>网友</span></div>
     </div>
-    <div class="part-one-content">
+    <div class="part-one-content" style="color: #565656; margin-top: 1rem">
         解析：这酒量没得说，不是酒仙也是酒鬼了。久经酒场的你喝起来不太经得住别人的劝，小心身子骨。虽然喝醉的次数也不少，可一说起跟你喝酒大家还是打心底里敬畏的。
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -317,12 +332,12 @@
         <h3 class="part-one-title" style="color: #fff; padding-bottom: 0.4rem">你的酒量击败全国</h3>
         <div class="result-percent"><span class="result-percent-number">96%</span><span>网友</span></div>
     </div>
-    <div class="part-one-content">
+    <div class="part-one-content" style="color: #565656; margin-top: 1rem">
         解析：天啊，你能喝这么多！！！必须是酒神了！！！频频举杯的你能喝倒所有到场的朋友，自己却依旧面带桃花微微含笑，这就叫气魄！你喝酒从来不是孤独简陋的，就算一个人喝也要白酒配月光，可谓是“酒家”里面最讲究的一个。
     </div>
     <div class="content today-hot" >
         <ul>
-            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200321751&idx=1&sn=6e6846448cb4eeaa1077727bc92ff009#rd" >
+            <a href="http://mp.weixin.qq.com/s?__biz=MjM5ODc2ODY2NA==&mid=200322542&idx=1&sn=a87b8eba6ec74bf246efb187f8542d09&scene=1&from=singlemessage&isappinstalled=0#rd" >
                 <li style="font-size: 2rem; margin-bottom: 0;">
                     关注国馆
                 </li>
@@ -337,13 +352,14 @@
     </div>
 </div>
 
-<div class="spinner"  style="display: none">
-    <div class="rect1"></div>
-    <div class="rect2"></div>
-    <div class="rect3"></div>
-    <div class="rect4"></div>
-    <div class="rect5"></div>
+<div class="loading-div" style="display: none;">
+    <div class="spinner">
+        <div class="bounce1"></div>
+        <div class="bounce2"></div>
+        <div class="bounce3"></div>
+    </div>
 </div>
+
 
 </body>
 <script src="js/jquery-1.8.0.js" type="text/javascript"></script>
