--- a/weixinApp/wine.html
+++ b/weixinApp/wine.html
@@ -222,7 +222,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
@@ -246,7 +246,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
@@ -270,7 +270,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
@@ -294,7 +294,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
@@ -318,7 +318,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
@@ -342,7 +342,7 @@
                     关注国馆
                 </li>
                 <li style="font-size: 1.2rem; color: #66c4ca; margin:0!important; ">
-                    guoguanjiu
+                    guoguan5000
                 </li>
                 <li style="line-height: 2rem">
                     国馆，让文化温暖人心的自媒体平台。我们致力于联合文化艺术界大师，重新发现中国文化，做最具人文情怀的中国收藏级文化白酒。
