--- a/nextHour/zhongguodao.html
+++ b/nextHour/zhongguodao.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head >
-    <title>国馆中国道</title>
+    <title>国馆·中国道即将发布，送给生命中的贵人</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta name="keywords" content="中国道,国馆,国馆网,国馆酒">
-    <meta name="description" content="国馆中国道">
+    <meta name="keywords" content="国馆中国道,国馆,国馆酒">
+    <meta name="description" content="国馆·中国道，中国收藏级文化白酒，酿酒大师与艺术大师匠心之作。它开创性地将艺术和美酒跨界联姻，融为一体，是你收藏、送礼、品饮的绝佳选择。
+">
     <!-- css style sheet -->
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/layout.css">
@@ -89,8 +90,9 @@
 
 <div class="site-container move-to-new-position" id="site-container">
 
-    <div class="good-information1 move-to-new-position" style="margin-top: -42px;">
-        <img src="images/111.png" style="width:625px; padding-top:85px; display:block; margin-left:auto; margin-right:auto;">
+    <div class="good-information1 move-to-new-position">
+        <img src="images/logo.png" style="width: 100px; height: 100px;padding-top: 85px; margin-bottom: 25px; display:block; margin-left:auto; margin-right:auto;">
+        <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto;">
              <span class="hidden">这一次，我们重新定义白酒,在主流之外，我们终于以全新的方式做出了这款白酒，它代表了当前国内酿酒技术、器型工艺的最高水平，它和所有品牌都不一样，它承载的是中国的文化、艺术和情感，没有其他。
              </span>
     </div>
