--- a/nextHour/zhongguodao.html
+++ b/nextHour/zhongguodao.html
@@ -89,7 +89,6 @@
 </nav>
 
 <div class="site-container move-to-new-position" id="site-container">
-
     <div class="good-information1 move-to-new-position">
         <img src="images/logo.png" style="width: 100px; height: 100px;padding-top: 85px; margin-bottom: 25px; display:block; margin-left:auto; margin-right:auto;">
         <img src="images/111.png" style="width:625px; display:block; margin-left:auto; margin-right:auto;">
@@ -178,6 +177,7 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://cdn.bootcss.com/twitter-bootstrap/3.0.3/js/bootstrap.min.js"></script>
+<script src="js/browsecheck.js" type="text/javascript"></script>
 <script>
     var isHiden = true; /*控制切换菜单*/
     $(document).ready(function(){
