--- a/nextHour/zhongguodao.html
+++ b/nextHour/zhongguodao.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head >
-    <title>国馆·中国道即将发布，送给生命中的贵人</title>
+    <title>国馆·中国道微信首发，把最好的礼物，献给生命中最重要的人</title>
     <meta name="viewport" charset="utf-8" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="keywords" content="国馆中国道,国馆,国馆酒">
@@ -163,14 +163,63 @@
 
 
     <div class="site-paper-content-position move-to-new-position" id="site-paper-content">
-        <div class="" style="min-height: 50px; background-color: #b4000a; width: 100%">
+        <div class="footer-content-title">把最好的礼物，献给生命中最重要的人。</div>
+        <div style="text-align: center; margin-top:20px">
+            <img src="images/qore-code.png" width="100" height="100">
         </div>
-            <footer class=" footer-fixed footer-promotional btn-set layout-single-column">
-                <a target="_blank" href="http://www.miitbeian.gov.cn" class="btn btn-link" rel="nofollow">备案号粤ICP备13087127号</a>
-            </footer>
-        </div>
+        <div class="under-qore-code">微信首发！限量5000套！<br>扫描二维码前往咨询与购买。<br>分享朋友圈就有机会赢取国馆 · 中国道。</div>
+        <footer class=" footer-fixed footer-promotional btn-set layout-single-column" id="bottom">
+            <a target="_blank" href="http://www.miitbeian.gov.cn" class="btn btn-link" rel="nofollow">备案号粤ICP备13087127号</a>
+        </footer>
+    </div>
+
+    <div class="nav-top-bottom">
+        <a href="#">
+            <div class=" nav-button-style displaybl icon-chevron-up"></div>
+        </a>
+        <a href="#bottom">
+            <div class=" nav-button-style displaybl icon-chevron-down"></div>
+        </a>
+        <a href="http://service.weibo.com/share/share.php?url=http%3A%2F%2Flocalhost%2Fguoguan-front%2FnextHour%2Fzhongguodao.html%23bottom%230-tsina-1-94756-397232819ff9a47a7b7e80a40613cfe1&title=%23%E9%85%92%E4%BB%A5%E8%BD%BD%E9%81%93%23%E5%9B%BD%E9%A6%86%C2%B7%E4%B8%AD%E5%9B%BD%E9%81%93%E5%BE%AE%E4%BF%A1%E9%A6%96%E5%8F%91%EF%BC%81%E9%99%90%E9%87%8F5000%E5%A5%97%EF%BC%81%E6%8A%8A%E6%9C%80%E5%A5%BD%E7%9A%84%E7%A4%BC%E7%89%A9%EF%BC%8C%E7%8C%AE%E7%BB%99%E7%94%9F%E5%91%BD%E4%B8%AD%E6%9C%80%E9%87%8D%E8%A6%81%E7%9A%84%E4%BA%BA%E3%80%82%E4%BA%86%E8%A7%A3%E8%AF%A6%E6%83%85%C2%BB&appkey=2106128267&pic=http%3A%2F%2Fblog.guoguan.com%2Fwp-content%2Fuploads%2F2014%2F05%2F%40%40ER1YOGX0S2%40WM_19.jpg&searchPic=false" target="_blank">
+            <div class="nav-button-style displaybl">
+                <img src="images/sina-icon.png">
+            </div>
+        </a>
+    </div>
+
+    <div class="bottom-fixed-nav">
+        <ul>
+            <li>了解更多：</li>
+            <li>
+                <a href="http://blog.guoguan.com/?p=131" target="_blank">
+                    国馆品牌故事<i class="icon-angle-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://blog.guoguan.com/?p=151" target="_blank">
+                    顶级好酒来源<i class="icon-angle-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://blog.guoguan.com/?p=180" target="_blank">
+                    极致器型设计<i class="icon-angle-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://blog.guoguan.com/?p=170" target="_blank">
+                    大师跨界之作<i class="icon-angle-right"></i>
+                </a>
+            </li>
+            <li>
+                <a href="http://blog.guoguan.com/?p=188" target="_blank">
+                    国馆团队介绍<i class="icon-angle-right"></i>
+                </a>
+            </li>
+        </ul>
     </div>
 </div>
+
+<div></div>
 
 
 <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
