--- a/site/m-order-search.html
+++ b/site/m-order-search.html
@@ -22,6 +22,18 @@
 <div class="content">
     <ul>
         <li class="content m-order-detail-content m-online-detail-content-new">
+           <div class="no-order-list">
+              <div class="order-title-label" style="width:auto;">
+                  你还没生成任何订单哦，支付成功后，订单及物流信息将出现在这里。
+              </div>
+              <div class="m-order-detail-partTwo" style="border-bottom: none; line-height: 1.6rem; margin-left: 0;">
+                  注：如果你已经付款成功，但仍未见订单信息，请在微信公众号<span class="color-f66900">“guoguanjiu”</span>中的对话框里提交问题。
+              </div>
+           </div>
+        </li>
+
+
+        <li class="content m-order-detail-content m-online-detail-content-new">
             <div class="m-order-detail-partTwo " style="padding-top: 0.8rem;">
                 <div class="ml1">
                     <div><span class="order-title-label">订购时间</span><span>2014-04-27</span></div>
